// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StorySummary renders correctly 1`] = `
<Page
  onBack={[MockFunction]}
  title="mockConstructor"
>
  <div
    className="uk-align-center uk-width-1-2@m"
  >
    <table
      className="uk-table"
    >
      <thead>
        <tr>
          <th
            className="uk-text-center"
          >
            Name
          </th>
          <th
            className="uk-text-center"
          >
            Estimate
          </th>
        </tr>
      </thead>
      <tbody>
        
      </tbody>
    </table>
  </div>
</Page>
`;

exports[`StorySummary renders estimates withs names 1`] = `
<Page
  onBack={[MockFunction]}
  title="mockConstructor"
>
  <div
    className="uk-align-center uk-width-1-2@m"
  >
    <table
      className="uk-table"
    >
      <thead>
        <tr>
          <th
            className="uk-text-center"
          >
            Name
          </th>
          <th
            className="uk-text-center"
          >
            Estimate
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            className="uk-text-center"
          >
            Bob
          </td>
          <td
            className="uk-text-center"
          >
            1
          </td>
        </tr>
        <tr>
          <td
            className="uk-text-center"
          >
            Andy
          </td>
          <td
            className="uk-text-center"
          >
            5
          </td>
        </tr>
        <tr>
          <td
            className="uk-text-center"
          >
            Joe
          </td>
          <td
            className="uk-text-center"
          >
            3
          </td>
        </tr>
        <tr
          className="uk-text-bold"
        >
          <td
            className="uk-text-center"
          >
            Average
          </td>
          <td
            className="uk-text-center"
          >
            3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</Page>
`;
